[package]
name = "tidb-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-select"
path = "src/bin/select.rs"

[[bin]]
name = "bench-insert"
path = "src/bin/insert.rs"

[dependencies]
rlt = { git = "https://github.com/wfxr/rlt", branch = "main" }
mysql_async = "0.34"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "time", "macros"] }
